---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: ?
  Changes:
    -  update chinese translation. credit sdqwo
---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: 2023-3-28
  Changes:
    - updated russian and chinese languages
    - removed several recipes from the allowed prod list
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2023-1-5
  Changes:
    - Crafting menu item organization
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2022-12-19
  Changes:
    - increased energy usage on centrifugal pan mk01-mk04, diamond mine and thickener-mk01.
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2022-11-28
  Changes:
    - tweaks for gunpowder addition.
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2022-10-20
  Changes:
    - adjustmentsto rock spawning.
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2022-10-14
  Changes:
    - A lot of stuff
---------------------------------------------------------------------------------------------------
Version: 1.6.8
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.6.7
Date: 2021-01-11
  Changes:
    - Nerfed organic solvent recipe
---------------------------------------------------------------------------------------------------
Version: 1.6.6
Date: 2020-11-24
  Changes:
    - Updated to factorio version 1.1.
---------------------------------------------------------------------------------------------------
Version: 1.6.5
Date: 2020-10-08