@@ -144,3 +144,7 @@ ENTITY {
         apparent_volume = 2.5
     }
 }
+
+if mods['pyalternativeenergy'] then
+    data.raw['assembling-machine']['py-heat-exchanger'].next_upgrade = 'py-heat-exchanger-mk02'
+end
